<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE xml>
<resources>

    <string name="app_name">Tasky</string>
    <string name="action_settings">Settings</string>
    <string name="folders">Folders</string>
    <string name="title">Tasky</string>
    <string name="title_section3">Section 3</string>
    <string name="add">Add Task</string>
    <string name="tv">TV Search</string>
    <string name="calendar">Calendar</string>
    <string name="todolist">To Do List</string>
    <string name="title_activity_tvsearch">TVSearchActivity</string>
    <string name="hello_world">TV Search</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="tv_search">Search For Shows</string>
    <string name="title_activity_task_view">TaskViewActivity</string>
    <string name="title_activity_edit_task">EditTaskActivity</string>
    <string name="Accept">Accept</string>
    <string name="Cancel">Cancel</string>
    <string name="loginUserName">Username</string>
    <string name="loginPassword">Password</string>
    <string name="title_activity_log_in">Login</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="title_activity_new_user">New User</string>
    <string name="CreateTask">Create Task</string>
    <string name="dueDate">Due Date: </string>
    <string name="reminder">Set a reminder?</string>
    <string name="taskDescription">Task Description</string>
    <string name="defaultDate">Jan. 1 2014</string>
    <string name="taskName">Task Name</string>
    <string name="back">Go Back</string>
    <string name="saveChanges">Save Changes</string>
    <string name="login">Log In</string>
    <string name="newUser">New User</string>
    <string name="createUser">Create User</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enterPassword">Reenter Password</string>
    <string name="createATask">Create a Task</string>
    <string name="logOut">Log Out</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="title_activity_list_view_adapter">ListViewAdapter</string>
    <string name="title_activity_service_verify">ServiceVerifyActivity</string>
    <string name="title_activity_verify_service">VerifyServiceActivity</string>
    <string name="serviceText">Select Your TV Provider</string>
    <string name="Service">Enter Your Area Code</string>
    <string name="changeZip">Edit Zip</string>
    <string name="priority">Priority: </string>
    <string name="folderMsg">Project: </string>
    <string name="or">Or</string>
    <string name="newFolder">New Folder</string>

</resources>
