<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/calToDoList"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/todolist" />
    
        <item
        android:id="@+id/calTVOpt"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/tv" />
        
        <item
         android:id="@+id/calAddTask"
         android:orderInCategory="3"
         android:title="addTask" />
        
        <item
            android:id="@+id/calEdit"
            android:orderInCategory="4"
            android:title="editTask" />
        
        <item
            android:id="@+id/calViewAll"
            android:orderInCategory="5"
            android:title="viewAll" />
    

</menu>
