<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE xml>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddTaskActivity"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
>
    <Button
	    android:id="@+id/addCreateTask"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:text="@string/CreateTask"
	    android:onClick="createTask"
	    />
	
	<Button
	    android:id="@+id/addCancel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:text="@string/Cancel"
	    android:onClick="cancel"
	    />
    
    <EditText 
        android:id="@+id/addName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/taskName" />
    
	<EditText
        android:id="@+id/addDesc"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addName"
        android:layout_centerHorizontal="true"
        android:hint="@string/taskDescription"
        android:singleLine="true" />
    
    <NumberPicker 
        android:id="@+id/addDueDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addDesc"
		android:layout_centerHorizontal="true" />
    
	<NumberPicker 
        android:id="@+id/addDueMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addDesc"
        android:layout_toLeftOf="@id/addDueDay"/>
    
	<NumberPicker 
        android:id="@+id/addDueYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addDesc"
		android:layout_toRightOf="@id/addDueDay"/> 

	<TextView
	    android:id="@+id/addDueDate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@id/addDueDay"
	    android:layout_toRightOf="@id/addDueYear"
	    android:layout_marginBottom="80dp" />

    <TextView 
        android:id="@+id/addWriteDue"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/addDueMonth"
        android:text="@string/dueDate"
        android:layout_alignBottom="@id/addDueMonth"
	    android:layout_marginBottom="80dp" />
    
    <TextView 
        android:id="@+id/addPriMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addDueDay"
        android:text="@string/priority"
        android:layout_centerHorizontal="true"/>
	
    <Spinner 
        android:id="@+id/addPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addDueDay"
        android:layout_toRightOf="@id/addPriMessage"/>
    
</RelativeLayout>
</ScrollView>
