<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditTaskActivity" >

    	<Button
	    android:id="@+id/editAccept"
	    android:layout_width="wrap_content"		
		android:layout_height="wrap_content"
		android:text="@string/Accept"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:onClick="acceptClick" />
	
		<Button
	    android:id="@+id/editCancel"
	    android:layout_width="wrap_content"		
		android:layout_height="wrap_content"
		android:text="@string/Cancel"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:onClick="acceptClick" />	
    
    <EditText
        android:id="@+id/editName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" 
        android:layout_below="@id/editAccept" />
    
	<EditText
	    android:id="@+id/editDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:layout_below="@id/editName" />
	
	<EditText
	    android:id="@+id/editDueDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:layout_below="@id/editDesc"
        android:inputType="date" />
		
	<EditText
	    android:id="@+id/editReminder"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/hello_world"
		android:layout_below="@id/editDueDate" />	
		

</RelativeLayout>
